# pt

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md
ext/: CMakeLists.txt
include/pt/: pt.h
include/pt/accelerators/: bvh.h
include/pt/bxdfs/: fresnel.h  lambert.h  specular.h
include/pt/camera/: perspective.h
include/pt/cameras/: perspective.h
include/pt/core/: bsdf.h  bxdf.h  camera.h  coordinate.h  distrib.h  film.h  filter.h  frame.h  fresnel.h  integrator.h  interaction.h  light.h  material.h  parallel.h  primitive.h  ray.h  sampler.h  sampling.h  scene.h  shape.h  texture.h  visibilitytester.h
include/pt/filters/: box.h  gaussian.h  triangle.h
include/pt/integrators/: path.h
include/pt/lights/: diffuse.h  infinite.h  point.h
include/pt/materials/: glass.h  matte.h  mirror.h
include/pt/math/: bounds2.h  bounds3.h  frame.h  math.h  matrix4.h  vector2.h  vector3.h
include/pt/samplers/: random.h
include/pt/shapes/: sphere.h  triangle.h
include/pt/textures/: constant.h  image.h  mix.h  scale.h
include/pt/utils/: imageio.h  objloader.h  plyloader.h
src/accelerators/: bvh.cpp
src/core/: fresnel.cpp  interaction.cpp  parallel.cpp  visibilitytester.cpp
src/integrators/: path.cpp
src/main/: ajax.cpp  bunny.cpp  cbox.cpp  distribtest.cpp  dragon.cpp  glass.cpp  imageio.cpp  main.cpp  point.cpp  table.cpp  twosphere.cpp
src/math/: matrix4.cpp
src/textures/: image.cpp
src/utils/: imageio.cpp
